# ai-billing-rule-extractor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  frontend.py  gemini.md  init.sql  main.py  pipeline.py  pyproject.toml  reset_db.py  test_engine.py
rules_engine/: Dockerfile
rules_extractor/: Dockerfile  examine_pdf.py  frontend.py  pipeline.py
