[project]
name = "ai-claim-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.3",
    "openai>=2.30.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.9.2",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
    "streamlit-pdf-viewer>=0.0.28",
    "uvicorn>=0.44.0",
]
